--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"/>
     <title>Simple Calculator</title>
   </head>
   <body>
